--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body::-webkit-scrollbar{
     font-size: 18px;
     font-weight: 500;
     padding-top: 20px;
+    cursor: pointer;
 }
 
 .library {
@@ -107,6 +108,7 @@ body::-webkit-scrollbar{
     outline: none;
     font-weight: 500;
     margin-top: 20px;
+    cursor: pointer;
 }
 
 .inner > * {
@@ -140,6 +142,7 @@ body::-webkit-scrollbar{
     margin:30px 0px 30px 25px;
     color: white;
     background-color: transparent;
+    cursor: pointer;
 }
 
 .footer-item {
